<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VITLIB</string>
    <string name="action_settings">Settings</string>
    
   	<string name="Title">VIT LIBRARY</string>
	<string name="Login">Student Login</string>
	<string name="Username">Username</string>
	<string name="Password">Password</string>
	<string name="Submit">Submit</string>
	<string name="Reset">Reset</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Search">Search Media</string>
	<string name="Request">Request Media</string>  
	<string name="Fine">Fine Calculator</string>  
	<string name="Issued">Media Issued</string>
    <string name="r1">1.Strict and absolute silence shall be observed in the Library. </string>
    <string name="r2">2.Cell Phone to be switched off inside the Library. </string>
    <string name="r3">3.Bags, Big handbags, Raincoat, Jerkin and Casual wears are strictly prohibited inside the library. </string>
    <string name="r4">4.Members are requested to keep their belongings at the entrance of the Library. However they are advised not to leave cell phones, purse, money, credit card and other valuables in the handbag outside the library. These items are liable to be lost. </string>
    <string name="r5">5.If the due date falls on a holiday for the Library, the next working day will be taken as the due date. </string>
    <string name="r6">6.Books will not be issued to members on the ID card of others. </string>
    <string name="r7">7.If any book is lost or damaged beyond repair, the person responsible shall replace it with a new copy or pay double the cost of the recent price and handling charges or as may be decided by the librarian. </string>
    <string name="r8">8.Membership Cards are not transferable. Books will not be issued to students on the Membership Card of staff members. </string>
    <string name="r9">9.Books will be issued subject to availability only. </string>
    <string name="r10">10.No sub-lending of books is permitted. </string>
    <string name="r11">11.Any kind of marking, underlining, clipping of books is absolutely forbidden. Readers shall be held responsible for any damage done to the book belonging to the Library and shall be required to replace such book or pay the value thereof. </string>
    <string name="r12">12.Absence from the university will not be allowed as an excuse for the delay in the return of books. </string>
</resources>
