<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="20dp"
    android:background="@drawable/back">

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="Rules And Regulation"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textSize="30dp" />

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:layout_marginTop="40dp"
     >

<LinearLayout
    android:layout_width="match_parent"
        android:layout_weight="50"
        android:layout_height="match_parent"
        android:orientation="vertical"
        
        >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/r1"
        android:textColor="#000000" 
        android:layout_marginTop="5dp"
        />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r2"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r3"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r4"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r5"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r6"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r7"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r8"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r9"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r10"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r11"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
    
   <TextView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/r12"
       android:layout_marginTop="5dp"
        android:textColor="#000000" />
 
    </LinearLayout>
    </ScrollView>
</LinearLayout>
