<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etUser"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/Title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/Login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPass"
        android:layout_below="@+id/etPass"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="46dp"
        android:onClick="login"
        android:text="@string/Submit"
        android:textColor="#000000"
     	android:background="#81DAF5"    />

    <Button
        android:id="@+id/btnRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSub"
        android:layout_alignBottom="@+id/btnSub"
        android:layout_alignLeft="@+id/tvLogin"
        android:layout_marginLeft="67dp"
        android:onClick="reset"
        android:text="@string/Reset"
        android:textColor="#000000" 
        android:background="#81DAF5"/>

    <EditText
        android:id="@+id/etUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:imeOptions="actionNext"
        android:hint="Username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPassword" 
        android:hint="Password"/>

</RelativeLayout>