<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/back">

     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button1"
         android:layout_alignRight="@+id/button1"
         android:layout_below="@+id/button1"
         android:layout_marginTop="20dp"
         android:background="#81DAF5"
         android:onClick="Request"
         android:text="@string/Request"
         />

     <Button
         android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button2"
         android:layout_alignRight="@+id/tv"
         android:layout_below="@+id/button2"
         android:layout_marginTop="20dp"
         android:background="#81DAF5"
         android:onClick="Fine"
         android:text="@string/Fine" />

     <Button
         android:id="@+id/button4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button3"
         android:layout_alignRight="@+id/button3"
         android:layout_below="@+id/button3"
         android:layout_marginTop="20dp"
         android:background="#81DAF5"
         android:onClick="Myfine"
         android:text="MY Profile" />

     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:onClick="Search"
         android:text="@string/Search" 
         android:background="#81DAF5" />
		
</RelativeLayout>
